[workspace]
resolver = "2"
members = [
  "corgos/boot/loader",
  "corgos/boot/logger",
  "corgos/boot/uart",
  "corgos/kernel/start",
  "support/ini_file",
  "support/semihosting",
]

[workspace.dependencies]
bitfield-struct = { version = "0.4", default-features = false }
conquer-once = { version = "0.4", default-features = false }
elf = { version = "0.7", default-features = false }
log = { version = "0.4", default-features = false }
raw-cpuid = { version = "11", default-features = false }
spinning_top = "0.3"
uefi = { version = "0.32", default-features = false }

tock-registers = { version = "0.9", default-features = false }
aarch64-cpu = "9.3"

ini_file = { path = "support/ini_file" }
boot_loader = { path = "corgos/boot/loader" }
boot_logger = { path = "corgos/boot/logger" }
boot_uart = { path = "corgos/boot/uart" }
kernel_start = { path = "corgos/kernel/start" }
semihosting = { path = "support/semihosting" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
