[workspace]
resolver = "2"
members = [
  "corgos/boot/loader",
  "corgos/boot/logger",
  "corgos/kernel/start",
  "support/ini_file",
  "support/page_bitmap",
  "support/poll_uart",
  "support/semihosting",
  "support/uefi_guids"
]

[workspace.dependencies]
acpi = { version = "5.0", default-features = false }
bitfield-struct = { version = "0.8", default-features = false }
conquer-once = { version = "0.4", default-features = false }
elf = { version = "0.7", default-features = false }
log = { version = "0.4", default-features = false }
raw-cpuid = { version = "11", default-features = false }
spinning_top = "0.3"
uefi = { version = "0.32", default-features = false }

ini_file = { path = "support/ini_file" }
boot_loader = { path = "corgos/boot/loader" }
boot_logger = { path = "corgos/boot/logger" }
kernel_start = { path = "corgos/kernel/start" }
page_bitmap = { path = "support/page_bitmap" }
poll_uart = { path = "support/poll_uart" }
semihosting = { path = "support/semihosting" }
uefi_guids = { path = "support/uefi_guids" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
