[package]
name = "corgos-boot"
version = "0.1.0"
authors = ["kromych"]
edition = "2021"

[dependencies]
uefi.workspace = true
log.workspace = true
raw-cpuid.workspace = true
elf.workspace = true
spinning_top.workspace = true
conquer-once.workspace = true
qemu-exit.workspace = true

corg-ini.workspace = true
