[package]
name = "boot_loader"
version = "0.0.0"
authors = ["kromych"]
edition = "2021"

# Has support for the aarch64 UEFI target
rust-version = "1.81"

[dependencies]
bitfield-struct.workspace = true
uefi.workspace = true
log.workspace = true
elf.workspace = true
qemu-exit.workspace = true

raw-cpuid.workspace = true
tock-registers.workspace = true
aarch64-cpu.workspace = true

boot_logger.workspace = true
ini_file.workspace = true
