[package]
name = "boot_loader"
version = "0.0.0"
authors = ["kromych"]
edition = "2021"

[features]
all_uefi_table_guids = ["uefi_guids/all_uefi_table_guids"]

[dependencies]
acpi.workspace = true
bitfield-struct.workspace = true
uefi.workspace = true
log.workspace = true
elf.workspace = true

raw-cpuid.workspace = true

boot_logger.workspace = true
ini_file.workspace = true
page_bitmap.workspace = true
semihosting.workspace = true
uefi_guids.workspace = true
